--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -13,5 +13,40 @@
 </head>
 <body>
 
+<div class="card text-center">
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto nav-flex-icons">
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Wild&Free</a>
+            </li>
+
+            <li  class="nav-item active">
+                <a class="nav-link" href="/">Home
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/animals">Animals</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/rangers">Rangers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/sightings">Sightings</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/location">Location</a>
+            </li>
+
+
+        </ul>
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+</div>
+
 </body>
 </html>
