--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -1,5 +1,20 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color:#003300;
+    font-family: 'Fredericka the Great', cursive;
+    font-size:20px;
+}
+
 body{
-    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("./images/css/wildlife1.jpg");
+    background-image:url("/images/wildlife1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    text-align: center;
+}
+
+.h1{
+    text-align: left;
+    color:#00ff00;
 }
