--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -4,21 +4,17 @@
     <title>{{#block "title"}} Wild&Free {{/block}}</title>
 
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
     <link rel="stylesheet" href="/css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans&family=Peddana&family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+    {{#block "styles"}}{{/block}}
 
 </head>
 <body>
 
 <div class="card text-center">
-    <div class="collapse navbar-collapse">
+    <div class="card-header">
+        <h2 class="h1">Wild&Free</h2>
         <ul class="navbar-nav ml-auto nav-flex-icons">
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Wild&Free</a>
-            </li>
 
             <li  class="nav-item active">
                 <a class="nav-link" href="/">Home
@@ -41,10 +37,10 @@
 
         </ul>
     </div>
-    <div class="card-body">
+   <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
     </div>
 </div>
 
