--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -3,7 +3,7 @@
 {{/partial}}
 {{#partial "content"}}
     <h1 id="h1-1">Interact With our App</h1>
-    <div class="container cont-2 cont-2-3-1" id="cont-0">
+    <div class="container cont-2 cont-2-3-1" id="">
         <div class="col-md-12 text-center"></div>
     </div>
 
