--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -11,8 +11,7 @@
 </head>
 <body>
 
-<div class="card text-center">
-    <div class="card-header">
+<header>
         <h2 class="h1">Wild&Free</h2>
         <ul class="navbar-nav ml-auto nav-flex-icons">
 
@@ -21,6 +20,7 @@
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="/animals">Animals</a>
             </li>
@@ -33,16 +33,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="/location">Location</a>
             </li>
-
-
         </ul>
-    </div>
-   <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
-    </div>
-</div>
+</header>
 
 </body>
 </html>
