--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -28,6 +28,7 @@ header {
     height: 80px;
     display: flex;
     align-items: center;
+    box-shadow: 0 0 25px 0 black;
 }
 header * {
     display: inline;
