--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -10,7 +10,6 @@
 
 </head>
 <body>
-
 <header>
         <h2 class="h1">Wild&Free</h2>
         <ul class="navbar-nav ml-auto nav-flex-icons">
@@ -31,10 +30,15 @@
                 <a class="nav-link" href="/sightings">Sightings</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/location">Location</a>
+                <a class="nav-link" href="/locations">Locations</a>
             </li>
         </ul>
 </header>
 
+{{#block "content"}}
+
+{{/block}}
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </html>
