--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -1,10 +1,11 @@
-* {
+{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color:#003300;
     font-family: 'Fredericka the Great', cursive;
     font-size:20px;
+    z-index: 4;
 }
 
 body{
@@ -20,7 +21,6 @@ body{
 }
 
 header {
-    /*background-image:url("/images/wildlife2.jpg");*/
     position: fixed;
     top: 0;
     left: 0;
@@ -40,7 +40,9 @@ header li a {
     color: white;
     text-decoration: none;
 }
-.animalsStyle {
-background: none;
-color: white;
+#animalsStyle {
+  position: absolute;
+  height: 100%;
+  color: black;
+  z-index: 4;
 }
