--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="/css/styles.css">
 
     {{#block "styles"}}{{/block}}
-
 </head>
+
 <body>
-<header>
+<div class="header">
         <h2 class="h1">Wild&Free</h2>
         <ul class="navbar-nav ml-auto nav-flex-icons">
 
@@ -33,8 +33,7 @@
                 <a class="nav-link" href="/locations">Locations</a>
             </li>
         </ul>
-</header>
-
+</div>
 {{#block "content"}}
 
 {{/block}}
