--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -59,3 +59,32 @@ color: #00ff00;
   box-shadow: 0 0 10px rgba(0,0,0,0.4);
   align-items: center;
 }
+.form>h1{
+  color: rgb(0, 51, 102);
+  font-size: 2.3em;
+}
+.form>input[type=text],
+.form>input[type=number]{
+  background: none;
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 1px solid rgb(0, 51, 102);
+  color: rgb(0, 26, 51);
+  outline: none;
+  display: block;
+  font-size: 1.5em;
+}
+
+.form input[type=submit]{
+  margin-top: 10px;
+  background: rgb(0, 0, 153);
+  width: 100%;
+  padding: 5px;
+  color: white;
+  font-size: 20px
+}
+::placeholder{
+  color: rgb(0, 89, 179);
+}
