--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -4,6 +4,14 @@
 {{#partial "content"}}
     <div class="title">
         <h1 class="text display-4"> Welcome To WILD&FREE! </h1>
+            <a class="nav-link" id="nav-link" href="/view/animals">View Animals</a>
+            <a class="nav-link" id="nav-link" href="/view/rangers">View Rangers</a>
+            <a class="nav-link" id="nav-link" href="/view/sightings">View Sightings</a>
+            <a class="nav-link" id="nav-link" href="/view/locations">View Locations</a>
+            <a class="nav-link" id="nav-link" href="/create/animals">Create Animals</a>
+            <a class="nav-link" id="nav-link" href="/create/rangers">Create Rangers</a>
+            <a class="nav-link" id="nav-link" href="/create/sightings">Create Sightings</a>
+            <a class="nav-link" id="nav-link" href="/create/locations">Create Locations</a>
     </div>
 {{/partial}}
 {{> layout.hbs}}
