--- a/src/main/resources/templates/sightings.hbs
+++ b/src/main/resources/templates/sightings.hbs
@@ -19,7 +19,7 @@
                 {{/each}}
             </div>
     {{else}}
-            <h1>No sightings!! Create a<a href="/create/sightings"> sighting</a> </h1>
+            <h1>No sightings!! Create a<a href="/create/sightings/new"> sighting</a> </h1>
     {{/if}}
     </div>
 {{/partial}}
